# flower-auto

./: .gitignore  Makefile  README.md  algo.md  dune-project  flake.nix  prover.opam
lib/: dune  flower.ml  itree.ml  tests.ml  utils.ml
lib/engine/: dune  fo.ml  io.ml  io.mli  lemmaDB.ml  lemmaDB.mli  lexer.mll  monad.ml  parser.mly  syntax.ml  test.ml  utils.ml
lib/iltp/: dune  fo.ml  io.ml  io.mli  lexer.mll  location.ml  location.mli  parser.mly  syntax.ml
test/: check.ml  classical.tautos  decide.ml  dune  edukera.ml  edukera.tautos  edukera_no_disj.tautos  fbintrees.ml  loop.tautos  tautos.ml  thesis.tautos  trace.ml  trees.ml
test/iltp/: check.ml  dune
